[gd_scene load_steps=4 format=3 uid="uid://dnlggmhpj748c"]

[ext_resource type="Texture2D" uid="uid://bhwdt4belt4pj" path="res://assets/Button 1.png" id="1_b1u8l"]
[ext_resource type="Script" path="res://Presets/category_select_btn.gd" id="2_luoko"]
[ext_resource type="FontFile" uid="uid://c608x6u2o8b2l" path="res://Font/Robfont-Regular.ttf" id="2_tavxm"]

[node name="CategorySelect_btn" type="TextureButton"]
custom_minimum_size = Vector2(367, 80)
texture_normal = ExtResource("1_b1u8l")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_luoko")

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 39.0
offset_right = 359.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("2_tavxm")
theme_override_font_sizes/font_size = 30
text = "30 questions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 4.0
offset_right = 361.0
offset_bottom = 37.0

[node name="Title" type="Label" parent="ScrollContainer"]
custom_minimum_size = Vector2(354, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tavxm")
theme_override_font_sizes/font_size = 30
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
